community-energy-connect-Final/terrafrom_deploy/backend-deployment1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: energy-backend-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: energy-backend
  template:
    metadata:
      labels:
        app: energy-backend
    spec:
      containers:
        - name: energy-backend
          image: 038462784735.dkr.ecr.us-east-2.amazonaws.com/energy-backend-v2:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: energy-backend-service
spec:
  type: ClusterIP
  selector:
    app: energy-backend
  ports:
    - port: 80
      targetPort: 80
