community-energy-connect-Final/terrafrom_deploy/frontend-deployment1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: energy-frontend-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: energy-frontend
  template:
    metadata:
      labels:
        app: energy-frontend
    spec:
      containers:
        - name: energy-frontend
          image: 038462784735.dkr.ecr.us-east-2.amazonaws.com/energy-frontend-v2:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: energy-frontend-service
spec:
  type: ClusterIP
  selector:
    app: energy-frontend
  ports:
    - port: 80
      targetPort: 80
